# vertical_farming_wsn

vertical_farming_wsn/central_nbiot/: CMakeLists.txt  nrf9160dk_nrf9160.overlay  prj.conf
vertical_farming_wsn/central_nbiot/coap_client/: coap_client.c  coap_client.h  coap_fsm.c  coap_message_parsing.c  coap_message_parsing.h
vertical_farming_wsn/central_nbiot/internal_uart/: internal_uart.c  internal_uart.h  message_parsing.c  message_parsing.h
vertical_farming_wsn/central_nbiot/inventory/: inventory.c  inventory.h
vertical_farming_wsn/central_nbiot/src/: main.c
vertical_farming_wsn/central_node/: CMakeLists.txt  README.rst  main.c  nrf9160dk_nrf52840.overlay  prj.conf
vertical_farming_wsn/central_node/ble_client/: ble_characteristic_control.c  ble_characteristic_control.h  ble_conn_control.c  ble_conn_control.h  ble_connection_data.c  ble_connection_data.h  ble_fsm.c  ble_fsm.h
vertical_farming_wsn/central_node/environment_control/: environment_control_config.c  environment_control_config.h  environment_control_fsm.c  environment_control_fsm.h
vertical_farming_wsn/central_node/flash_system/: flash_system.h
vertical_farming_wsn/central_node/internal_uart/: internal_uart.c  internal_uart.h  message_parsing.c  message_parsing.h
vertical_farming_wsn/central_node/measurements/: measurements_data_storage.c  measurements_data_storage.h  measurements_fsm.c  measurements_fsm.h
vertical_farming_wsn/central_node/watchdog_timer/: watchdog_timer.c
vertical_farming_wsn/sensor_node/: CMakeLists.txt  README.rst  nrf52840dk_nrf52840.overlay  prj.conf
vertical_farming_wsn/sensor_node/adc_calibration/: adc_calibration.c  adc_calibration.h
vertical_farming_wsn/sensor_node/battery_measurement/: battery_measurement.c  battery_measurement.h
vertical_farming_wsn/sensor_node/ble_server/: ble_configure_service.c  ble_configure_service.h  ble_conn_control.c  ble_conn_control.h  (+2 more)
(+19 files in other folders)
